@@ -5,6 +5,8 @@ kickseed (0.46) UNRELEASED; urgency=low
   * Remove Ubuntu-specific hostname in setup/net.
   * Unbrand an Ubuntu-specific error message.
   * Remove some old base-config cruft.
+  * The Ubuntu standard tasks are now just called 'standard', and this makes
+    more sense for Debian too.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 18 Jun 2007 22:22:58 +0100
 
